--- a/css/style.css
+++ b/css/style.css
@@ -1798,6 +1798,30 @@ select:focus {
 }
 
 
+
+#location-google-map1{
+  width: 100%;
+  height: 400px;
+}
+
+#location-google-map2{
+  width: 100%;
+  height: 400px;
+}
+
+#location-google-map3{
+  width: 100%;
+  height: 400px;
+}
+
+#location-google-map4{
+  width: 100%;
+  height: 400px;
+}
+
+
+
+
 /*** 
 =============================================
     Footer area style
@@ -2576,21 +2600,7 @@ select:focus {
   transition: all 0.5s ease 0s;
   width: 100%;    
 }
-.single-blog-post:hover .img-holder .overlay {
-  background-color: rgba(1, 48, 94, 0.85);
-}
-.single-blog-post:hover .img-holder .overlay .box {
-  border-color: #fdc716;
-}
-.single-blog-post:hover .img-holder .overlay .box .content a {
-  opacity: 1;
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-.single-blog-post:hover .img-holder img {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
+
 
 .single-blog-post .text-holder {
   
